Update website code

--- a/css/modules.css
+++ b/css/modules.css
@@ -1,7 +1,7 @@
 /*
  * Modulifier || Code released under the UNLICENSE
  * Code under other copyrights & licenses listed below.
- * https://modulifier.web-dev.tools/#responsive;images;buttons
+ * https://modulifier.web-dev.tools/#responsive;images;nice-lists;buttons
  */
 
 @-moz-viewport { width: device-width; scale: 1; }
@@ -103,6 +103,38 @@ svg.img-flex {
   text-align: left;
   text-indent: 100%;
   white-space: nowrap;
+}
+
+ul {
+  list-style-type: none;
+}
+
+ul > li::before {
+  content: "·";
+  float: left;
+  margin-left: -1.6em;
+  width: 1.3em;
+  text-align: right;
+}
+
+ol {
+  counter-reset: ol-simple-numbers;
+  list-style-type: none;
+}
+
+ol > li::before {
+  float: left;
+  margin-left: -1.6em;
+  width: 1.3em;
+  counter-increment: ol-simple-numbers;
+  content: counter(ol-simple-numbers);
+  text-align: right;
+}
+
+.list-group > li::before,
+.list-group-inline > li::before,
+.list-group--inline > li::before {
+  content: none;
 }
 
 .link-box {
